fixed dashboard overflow issues, changed the display of welcome message to conditional

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,3 +8,6 @@
   margin: 0px;
   font-family: "DM Sans", serif;
 }
+/* body{
+  overflow: hidden;
+} */
